[tool.poetry]
name = "bdb-parser"
version = "0.1.0"
description = ""
authors = ["dorianvp <dariovp01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
berkeleydb = "^18.1.11"
asn1crypto = "^1.5.1"
bsddb3 = "^6.2.9"
secp256k1 = "^0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
